[gd_scene load_steps=14 format=3 uid="uid://bhuu6ey13ich3"]

[ext_resource type="Script" uid="uid://ba7yqilwide7i" path="res://component_packages/standard_enemy_package/standard_enemy_package.gd" id="1_d67l1"]
[ext_resource type="PackedScene" uid="uid://deahsha3celd1" path="res://components/general_components/health/health.tscn" id="1_levyg"]
[ext_resource type="PackedScene" uid="uid://wc1gcy3mee7j" path="res://components/general_components/statuses/statuses.tscn" id="2_5nmlj"]
[ext_resource type="PackedScene" uid="uid://ct1whb4xpwghd" path="res://components/movement_components/chase_player/chase_player.tscn" id="3_cxcgi"]
[ext_resource type="PackedScene" uid="uid://cplh441v1jx3u" path="res://components/visual_components/flash_sprite_on_hit/flash_sprite_on_hit.tscn" id="4_6wmvv"]
[ext_resource type="PackedScene" uid="uid://c362cd6lr1qla" path="res://components/audio_components/sfx_on_damaged/sfx_on_damaged.tscn" id="4_a5acd"]
[ext_resource type="AudioStream" uid="uid://cnrc75swivduv" path="res://common/sfx/hit/stone_hit_light.wav" id="5_oimam"]
[ext_resource type="PackedScene" uid="uid://dxhbt6ubuol17" path="res://components/enemy_components/attack_player_area/attack_player_area.tscn" id="7_y3a8v"]
[ext_resource type="PackedScene" uid="uid://csjlq5eyrpy2d" path="res://components/visual_components/fade_in/fade_in.tscn" id="8_2h1cm"]
[ext_resource type="PackedScene" uid="uid://df5pxe7kfqaxa" path="res://components/enemy_components/enemy_death_particles/enemy_death_particles.tscn" id="9_7a2bf"]
[ext_resource type="PackedScene" uid="uid://cusrydlnh0qj1" path="res://components/enemy_components/tunneling_detection/tunneling_detection.tscn" id="11_d44cm"]
[ext_resource type="PackedScene" uid="uid://bv410aoswxj30" path="res://components/general_components/drop_item_on_death/drop_item_on_death.tscn" id="13_4l3kl"]
[ext_resource type="Resource" uid="uid://bjyuhgfah8ie1" path="res://content/items/husk/husk.tres" id="14_iqwjj"]

[node name="StandardEnemyPackage" type="Node2D"]
script = ExtResource("1_d67l1")

[node name="Health" parent="." instance=ExtResource("1_levyg")]

[node name="Statuses" parent="." instance=ExtResource("2_5nmlj")]

[node name="FlashSpriteOnHit" parent="." node_paths=PackedStringArray("_health") instance=ExtResource("4_6wmvv")]
rotation = -1.57079
_health = NodePath("../Health")

[node name="FadeSpriteIn" parent="FlashSpriteOnHit" node_paths=PackedStringArray("_canvas_item") instance=ExtResource("8_2h1cm")]
_canvas_item = NodePath("..")

[node name="AttackPlayerArea" parent="." node_paths=PackedStringArray("statuses") instance=ExtResource("7_y3a8v")]
statuses = NodePath("../Statuses")

[node name="ChasePlayer" parent="." node_paths=PackedStringArray("_statuses") instance=ExtResource("3_cxcgi")]
_statuses = NodePath("../Statuses")
move_speed = 200.0

[node name="DropItemOnDeath" parent="." node_paths=PackedStringArray("_health") instance=ExtResource("13_4l3kl")]
_health = NodePath("../Health")
item_data = ExtResource("14_iqwjj")

[node name="TunnelingDetection" parent="." instance=ExtResource("11_d44cm")]

[node name="SFXOnDamaged" parent="." node_paths=PackedStringArray("_health") instance=ExtResource("4_a5acd")]
stream = ExtResource("5_oimam")
_health = NodePath("../Health")

[node name="EnemyDeathParticles" parent="." node_paths=PackedStringArray("_health") instance=ExtResource("9_7a2bf")]
_health = NodePath("../Health")
